<resources>
    <string name="app_name" translatable="false">Pocket Password</string>

    <string name="app_short_name" translatable="false">Pocket Password</string>
    <string name="slogan">“Sadelik ve Güvenlik”</string>

    <string name="first_open_error">Uygulama ayarları yapılamadı. Lütfen uygulamayı kaldırıp tekrar deneyin.</string>

    <string name="account_name">Hesap</string>
    <string name="password">Şifre</string>

    <string name="example_name">Örnek Hesap</string>
    <string name="example_account">ornek_hesap@mail.com</string>
    <string name="example_password">Ornek_Sifre</string>

    <string name="forgot_password">Şifrenizi Unutursanız Ne Olur ?</string>
    <string name="forgot_password_title">Şifrenizi Unutursanız Ne Olur ?</string>
    <string name="forgot_password_message">Şifreler sizin şifreniz ile şifrelenir. Herhangi bir master key, geri dönüş yoktur. Basitçe şifrenizi unutursanız verilerinizi kaybedersiniz.</string>

    <string name="contact_us">İletişim için tıklayın</string>

    <string name="terms">Kullanım Koşulları</string>
    <string name="terms_content">Yakında Gelicek…</string>
<!--    TODO-->
    <string name="terms_title">Kullanım Koşulları</string>


    <string name="already_used">%1$s isimli bir kayıt zaten var</string>
    <string name="password_must_strong"><![CDATA[Şifrenizde büyük - küçük harf, sayı ve bir özel işaret olmalı. ($-_+=)]]></string>
    <string name="password_not_match">Şifreler birbiriyle eşleşmiyor</string>

    <string name="button_add">Kaydı Ekle</string>
    <string name="button_save">Kaydı  Güncelle</string>
    <string name="button_login">Giriş Yap</string>
    <string name="button_confirm">Onayla</string>
    <string name="button_copy">Şifreyi Kopyala</string>
    <string name="button_export_backup">Kayıtların Yedeğini Al</string>
    <string name="button_import_backup">Kayıtları Yedekten Yükle</string>
    <string name="button_copy_account">Hesabı Kopyala</string>
    <string name="button_enter">Ayarları Görüntüle</string>
    <string name="button_contact_us">Bize Yazın</string>
    <string name="button_send_error_log">Hata Raporlarını Gönder</string>
    <string name="button_delete_password">Kaydı Sil</string>
    <string name="button_change_password">Uygulama Şifresini Güncelle</string>
    <string name="button_register">Kaydı Tamamla</string>

    <string name="input_name">Eklemek istediğiniz hesabın kayıt adı</string>
    <string name="input_name_edit">Düzenlemek istediğiniz hesabın kayıt adı</string>
    <string name="input_account">Eklemek istediğiniz hesabın kullanıcı adı</string>
    <string name="input_account_edit">Düzenlemek istediğiniz hesabın kullanıcı adı</string>
    <string name="input_password">Eklemek istediğiniz hesabın şifresi</string>
    <string name="input_password_edit">Düzenlemek istediğiniz hesabın şifresi</string>
    <string name="input_category">Düzenlemek istediğiniz hesabın kategorisi</string>
    <string name="input_password_repeat_edit">Uygulama şifresinin tekrarı</string>
    <string name="input_password_register_edit">Uygulama şifreniz\\nDİKKAT! UNUTMANIZ DURUMUNDA VERİLERİNİZE ERİŞEMEZSİNİZ</string>
    <string name="input_login_password">Uygulamayı ilk açtığınızda belirlediğiniz şifre</string>
    <string name="input_password_import">Yedeği oluşturulduğuz zaman kullandığınız şifreyi giriniz</string>
    <string name="input_password_settings_edit">Ayarları görüntüleyebilmeniz için önce uygulama şifrenizi girmelisiniz</string>
    <string name="input_password_rchange_edit">Bundan sonra kullanmak istediğiniz uygulama şifreniz</string>
    <string name="input_password_settings">Ayarları güncellemek için uygulama şifrenizi girmelisiniz</string>

    <string name="hint_name">Kayıt Adı</string>
    <string name="hint_password">Hesap Şifresi</string>
    <string name="hint_name_edit">Kayıt Adı</string>
    <string name="hint_password_edit">Hesap Şifresi</string>
    <string name="hint_category">Kategori</string>
    <string name="hint_password_repeat_edit">Uygulama Şifresinin Tekrarı</string>
    <string name="hint_name_example">İş Mail, Gizli Soru, Bilgisayar Şifresi vs…</string>
    <string name="hint_password_register_edit">Uygulama Şifresi</string>
    <string name="hint_search">Aramaya yapmak için basın</string>
    <string name="hint_password_import">Yüklemek istediğiniz yedeğin şifresi</string>
    <string name="hint_account_edit">Kullanıcı Adı</string>
    <string name="hint_password_change_edit">Yeni Uygulama şifreniz</string>
    <string name="hint_password_change_repeat_edit">Yeni uygulama şifrenizin tekrarı</string>
    <string name="hint_password_app">Uygulama Şifresi</string>

    <string name="tab_add_password">EKLE</string>
    <string name="tab_list_password">ŞİFRELER</string>
    <string name="tab_settings">AYARLAR</string>
    <string name="loading">İşlem Yapılıyor. Lütfen bekleyin…</string>
    <string name="clipboard_title">Şifre</string>

    <string name="account_clipboard">%1$s Kaydının hesabı başarıyla kopyalanmıştır</string>
    <string name="password_clipboard">%1$s Kaydının şifresi başarıyla kopyalanmıştır</string>

    <string name="register_failure">Kayıt sırasında sorun oluştu. EC : 1</string>
    <string name="register_failure_1">Kayıt sırasında sorun oluştu. HK : 2</string>
    <string name="register_failure_2">Kayıt sırasında sorun oluştu. HK : 3</string>
    <string name="register_failure_3">Kayıt sırasında sorun oluştu. HK : 4</string>
    <string name="password_wrong_1">Şifreniz yanlış, lütfen kontrol edin</string>
    <string name="password_required">Giriş yapmak için şifrenizi girmelisiniz</string>
    <string name="password_repeat">Şifre tekrarı</string>

    <string name="failure_update_password">Şifre güncellenirken sorun oluştu</string>
    <string name="failure_password_clipboard">Şifre kopyalanamadı</string>
    <string name="failure_load_list">Liste yüklenirken sorun oluştu</string>
    <string name="failure_export_null">Liste yüklenirken sorun oluştu. Yedek alınacak kayıt yok veya bir sorun oluştu</string>
    <string name="failure_export_data">Kayıtlarınız yedek alınırken sorun oluştu lütfen tekrar deneyin.</string>
    <string name="failure_export_backup_oar">Kayıtlarınızı yedek alma sırasında sorun oluştu</string>
    <string name="failure_insert_backup">Kayıtlar içeri aktarılırken sorun oluştu.\nToplam %1$s kayıt aktarılamadı.</string>
    <string name="failure_account_clipboard">Hesap kopyalanırken sorun oluştu</string>
    <string name="failure_load_category_list">Kategoriler yüklenemedi, lütfen uygulamayı yeniden başlatmayı deneyin</string>
    <string name="failure_send_error_log">Hata raporları gönderilirken sorun oluştu. Lütfen tekrar deneyin.</string>

    <string name="success_add_password">Şifre kaydınız başarıyla oluşturuldu.</string>
    <string name="success_update_password">Şifre kaydı başarıyla güncellendi</string>
    <string name="success_update_record">Kayıt başarıyla güncellendi</string>
    <string name="success_export_backup">Kayıtlarınız başarıyla yedeklendi</string>
    <string name="success_insert_backup">Kayıtlarınız sorunsuz bir şekilde yedekten içeri aktarıldı</string>
    <string name="success_delete_password">Şifre kaydı başarıyla silindi</string>

<!--    TODO-->
    <string name="company">Pocket Password - Kalender Software tarafından geliştirildi</string>

    <string name="action_ok">Tamam</string>

    <string name="prompt_email">EPosta</string>
    <string name="prompt_password">Şifre</string>

    <string name="switch_remember">Sadece Girişte Şifre Sor</string>
    <string name="switch_hide_view">Şifreyi doğrudan görüntülemeyi engelle</string>

    <string name="title_activity_login">Giriş Yap</string>
    <string name="action_confirm">Onayla</string>

    <string name="password_wrong">Şifre doğru değil, lütfen şifrenizi kontrol edin</string>

    <string name="view_null">Sayfa yüklenirken sorun oluştu</string>

    <string name="switch_disable_error_log">Hata loglarını aktif et</string>
    <string name="switch_disable_info_log">Bilgilendirme loglarını aktif et</string>

    <string name="select_category">Bir kategori seçiniz</string>
    <string name="select_category_cancel">Vazgeç</string>

    <string name="dialog_confirm">Onayla</string>
    <string name="dialog_delete_password">Şifre kaydını silmek istediğinize emin misiniz ?</string>
    <string name="dialog_delete_password_title">Şifre Kaydı Silme</string>
    <string name="dialog_cancel">İptal</string>

    <string name="dialog_negative">İptal</string>
    <string name="dialog_positive">Onayla</string>

    <string name="title_success_change_password">Hesap şifreniz değiştirildi</string>
    <string name="title_failure_change_password">Şifre değiştirilemedi</string>

    <string name="message_success_change_password">Hesap şifreniz başarıyla değiştirildi.\nUygulamayı yeniden başlatmanızı tavsiye ederiz.</string>
    <string name="message_failure_change_password_and_revert">Hesap şifresi değiştirilemedi.\nFakat kayıtlar korundu.</string>
    <string name="message_failure_change_password_and_failure_revert"><![CDATA[Account password could not be changed.\nAlso the records could not be restored.\\n<b>Your data loss may have occurred. Please check.</b>]]></string>
    <string name="message_failure_change_password_set_data"><![CDATA[Hesap şifresi değiştirildi fakat yeni şifre aktarılamadı.\n<b>Veri kaybınız olmuş olabilir. Lütfen kontrol edin.</b>]]></string>

    <string name="mail_subject">Bize Yazın - Pocket Password</string>
    <string name="mail_chooser">Bir Mail Uygulaması Seçin :</string>
    <string name="email_log_error" translatable="false">kalender.contact@gmail.com</string>
    <string name="email_log_info" translatable="false">kalender.contact@gmail.com</string>
    <string name="email_contact" translatable="false">kalender.contact@gmail.com</string>
    <string name="email_log_error_subject">Hata Logları</string>

    <string name="message_failure_change_password__pre_error"><![CDATA[Şifre değiştirilirken sorunla karşılaşıldı.\\nDaha sonra tekrar deneyin.\\n<b>Eğet sorun devam ediyorsa bize logları atabilir veya doğrudan yazabilirsiniz</b>]]></string>

    <string name="dialog_change_password_title">Dikkat !!!</string>
    <string name="confirm_import_backup_title">Dikkat !!!</string>

    <string name="confirm_import_backup">Dikkat !!! Yedek yüklenirken mevcut verilerinizi kaybedebilirsiniz. Lütfen yedek aldıktan sonra yedek yükleyin.</string>
    <string name="dialog_change_password">Şifre değiştirirken verileri kaybedebilirsiniz.\nLütfen değişmeden önce yedek alınız.\nDevam etmek istiyormusunuz ?</string>

    <string name="category_all">Hepsi</string>
    <string name="category_social_media">Sosyal Medya</string>
    <string name="category_bank">Banka</string>
    <string name="category_mail">E - Posta</string>
    <string name="category_server">Sunucu</string>
    <string name="category_app">Uygulama</string>
    <string name="category_computer">Bilgisayar</string>
    <string name="category_service">Servis</string>
    <string name="category_other">Diğerleri</string>
    <string name="category_e_commerce">E - Ticaret</string>
    <string name="category_governor">Resmi</string>
    <string name="category_licence">Lisans</string>
    <string name="category_card">Kredi / Banka Kartı</string>

    <string name="min_length">%1$s en az %2$d karakter olmalıdır</string>
</resources>
