<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        style="@style/FormInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name_edit"
        app:errorEnabled="false"
        app:helperText="@string/input_name_edit"
        app:helperTextEnabled="true">

        <!--        android:hint="@string/hint_name_example"-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLength="@integer/name_max_length"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/FormInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password_edit"
        app:errorEnabled="false"
        app:helperText="@string/input_password_edit"
        app:helperTextEnabled="true"
        app:passwordToggleDrawable="@drawable/ic_remove_red_eye_white_24dp"
        app:passwordToggleEnabled="true">

        <!--        android:hint="@string/hint_name_example"-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="@integer/password_max_length"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        style="@style/FormButton"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/button_save"
        app:icon="@drawable/ic_save_white_24dp" />
</LinearLayout>