<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/svCompany"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnContactUS"
                style="@style/FormButton"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:backgroundTint="@color/green"
                android:textColor="@color/tintLightBlue"
                android:text="@string/button_contact_us"
                app:icon="@drawable/ic_email_24dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSendErrorLog"
                style="@style/FormButton"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:backgroundTint="@color/red"
                android:textColor="@color/tintRed"
                android:text="@string/button_send_error_log"
                app:icon="@drawable/ic_bug_report_24dp" />

            <TextView
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="@string/company"
                android:layout_width="match_parent"
                android:textColor="@color/colorTextFaint"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>